--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         </button>
       </div>
     </div>
+
+    <!-- title section -->
+    <div class="text-center bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] p-5">
+      <img src="./assets/logo-dark.png" class="mx-auto h-20 w-20 mb-3" alt="" />
+      <h1 class="font-bold text-4xl text-[#FFFFFF] mb-5">Emergency Service Directory</h1>
+      <p class="text-[#FFFFFF] font-semibold text-xl mb-5">
+        Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh
+      </p>
+    </div>
   
 </body>
 </html>
