--- a/index.html
+++ b/index.html
@@ -214,7 +214,20 @@
 
           </div>
         </div>
-         
+         <!-- call History -->
+          <aside class="lg:col-span-1 h-full">
+          <div class="bg-white p-6 md:p-6 rounded-xl shadow-lg h-full flex flex-col">
+            <div class="flex justify-between items-center mb-4">
+              <h3 class="text-lg md:text-lg font-semibold flex items-center gap-2">
+                <i class="fa-regular fa-clock text-lg md:text-xl font-medium"></i> Call History
+              </h3>
+              <button id="clear-history" class="bg-[#00A63E] hover:bg-green-800 text-white px-4 md:px-6 py-2 rounded-full text-sm md:text-base">
+                Clear
+              </button>
+            </div>
+            <ul id="history-list" class="space-y-3 flex-1 overflow-y-auto pr-1"></ul>
+          </div>
+        </aside>
 
 </body>
 </html>
