--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
 
   <body class="bg-[#41ff6b1a]">
    
-    <div class="flex justify-between items-center p-5 ml-7 mr-5 bg-white">
+   <div class="flex flex-col md:flex-row justify-between items-center p-5 ml-3 md:ml-7 mr-3 md:mr-5 bg-white gap-4">
       <div class="flex items-center">
-        <img src="./assets/logo.png" class="w-15 h-15 mr-3" alt="Logo" />
+        <img src="./assets/logo.png" class="w-12 h-12 mr-3" alt="Logo" />
         <div>
-          <h1 class="font-bold text-2xl text-green-800">Emergency<br />Service</h1>
+          <h1 class="font-bold text-xl md:text-2xl text-green-800 leading-tight">Emergency<br />Service</h1>
         </div>
       </div>
-      <div class="flex gap-5">
-        <button class="px-7 py-6 btn btn-soft btn-accent flex items-center rounded-full text-bold text-black text-lg bg-[#41ff6b1a]">
+      <div class="flex flex-wrap gap-3 md:gap-5">
+        <button class="px-5 py-4 md:px-7 md:py-6 btn btn-soft btn-accent flex items-center rounded-full text-bold text-black text-base md:text-lg bg-[#41ff6b1a]">
           <span id="love-count" class="font-black">0</span>
-          <img src="./assets/heart.png" class="w-7 h-7" alt="" />
+          <img src="./assets/heart.png" class="w-6 h-6 md:w-7 md:h-7 ml-2" alt="" />
         </button>
-        <button class="px-7 py-6 btn btn-soft btn-success flex items-center rounded-full text-bold text-black text-lg bg-[#41ff6b1a]">
+        <button class="px-5 py-4 md:px-7 md:py-6 btn btn-soft btn-success flex items-center rounded-full text-bold text-black text-base md:text-lg bg-[#41ff6b1a]">
           <span id="coinCount" class="font-black">100</span>
-          <img src="./assets/coin.png" class="w-7 h-7" alt="" />
+          <img src="./assets/coin.png" class="w-6 h-6 md:w-7 md:h-7 ml-2" alt="" />
         </button>
-        <button class="px-7 py-6 btn btn-success bg-[#00A63E] rounded-full text-bold text-white text-base ">
+        <button class="px-5 py-4 md:px-7 md:py-6 btn btn-success bg-[#00A63E] rounded-full text-bold text-white text-sm md:text-base">
           <span id="copy-count">0</span> Copy
         </button>
       </div>
     </div>
 
-    <!-- title section -->
+    <!-- Title -->
     <div class="text-center bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] p-5">
-      <img src="./assets/logo-dark.png" class="mx-auto h-20 w-20 mb-3" alt="" />
-      <h1 class="font-bold text-4xl text-[#FFFFFF] mb-5">Emergency Service Directory</h1>
-      <p class="text-[#FFFFFF] font-semibold text-xl mb-5">
-        Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh
+      <img src="./assets/logo-dark.png" class="mx-auto h-16 w-16 md:h-20 md:w-20 mb-3" alt="" />
+      <h1 class="font-bold text-2xl md:text-4xl text-[#FFFFFF] mb-5">Emergency Service Directory</h1>
+      <p class="text-[#FFFFFF] font-semibold text-base md:text-xl mb-5 px-2 md:px-0">
+        Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of Bangladesh
       </p>
     </div>
 
