update image part

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="p-8 rounded-3xl bg-white shadow-lg card">
               <div class="flex justify-between">
                 <div class="rounded-2xl bg-[#FFEAEA] p-3">
-                  <img src="/assets/fire-service.png" class="h-8" alt="fire" />
+                  <img src="./assets/fire-service.png" class="h-8" alt="fire" />
                 </div>
                 <div><i class="fa-regular fa-heart heart text-xl mt-3"></i></div>
               </div>
@@ -283,7 +283,7 @@
     }
   });
 
-  // 🗑 Clear
+  //  Clear
   clearBtn.addEventListener("click", () => (historyList.innerHTML = ""));
 </script>
 
